Enable i18n on React using Rails translation files
Configure i18n-js gem and i18n-js js lib in order to make Rails
translations available to js.

See this comment for reference:
https://github.com/reactjs/react-rails/issues/128#issuecomment-497921107

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@rails/webpacker": "4.2.2",
     "axios": "0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "i18n-js": "^3.5.1",
     "prop-types": "^15.7.2",
+    "rails-erb-loader": "^5.5.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react_ujs": "^2.6.1",
