--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.0.0-0",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-react": "^7.16.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.1.1",
+    "@rails/webpacker": "5.4.3",
     "axios": "0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "i18n-js": "^3.5.1",
     "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.5.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+    "webpack": "^4.46.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3"
   }
 }
